Fixed issue with large images being cut off on canvas rendering
Fixed issue with large images being cut off on canvas rendering

--- a/css/generator.css
+++ b/css/generator.css
@@ -6,8 +6,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 65vh;
-  width: 80vw;
   box-sizing: border-box;
 }
 
@@ -66,7 +64,8 @@
   background-color: #f5f5f5;
   overflow-x: auto;
   width: calc(100% - 2vh);
-  max-width: 80vh;
+  max-width: 70vh;
+  height: 10vh;
 }
 
 .emoji-list button {
